# vTodo

./: .env.example  .gitignore  .mcp.json  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy.yml
.kamal/: secrets.example
apps/accounts/: adapters.py  urls.py  utils.py  views.py
apps/api/: serializers.py  urls.py  views.py
apps/boards/: apps.py  models.py  selectors.py  signals.py  urls.py  views.py
apps/emailauth/: apps.py  models.py  urls.py  views.py
apps/indieauth/: apps.py  auth.py  models.py  outbound.py  urls.py  views.py
apps/integrations/: admin.py  apps.py  models.py  tasks.py  urls.py  views.py
apps/micropub/: apps.py  tasks.py
apps/tasks/: admin.py  apps.py  models.py  selectors.py  signals.py
apps/teams/: admin.py  models.py  urls.py  views.py
apps/users/: admin.py  models.py  urls.py  views.py
config/: celery.py  deploy.yml  settings.py  urls.py
mcp_server/: client.py  config.py  server.py
static/: app.css  app.js  manifest.json
staticfiles/: staticfiles.json
templates/: base.html  login.html
templates/boards/: _columns.html  _filter_bar.html  _filter_response.html  board.html
templates/emailauth/: verify.html
templates/integrations/: skylight_mapping.html  skylight_select_calendar.html
templates/partials/: task_activity.html  task_card.html  task_comments.html  task_edit_form.html  task_move_response.html  task_panel_board_response.html  task_panel_content.html  task_panel_create.html  task_panel_edit.html  task_panel_update_response.html
templates/teams/: invite_accept.html
(+59 files in other folders)
